fix: adjust positioning of elements in overlay edit contact for better alignment

--- a/src/app/contacts/overlay-edit-contact/overlay-edit-contact.scss
+++ b/src/app/contacts/overlay-edit-contact/overlay-edit-contact.scss
@@ -1,3 +1,5 @@
+$--panel-dark-correction: 25px;
+
 /* ===== Backdrop: fixed, volle Fläche, zentriert ===== */
 .mobile-edit-backdrop {
   position: fixed;
@@ -38,7 +40,7 @@
   left: 0;
   top: 0;
   width: 100%;
-  height: 351px;
+  height: 351px - $--panel-dark-correction;
   background: #2A3647;
   padding: 66px 24px;
   display: flex;
@@ -60,19 +62,15 @@
     top: 10px;
     width: 90px;
     border: 2px solid #29ABE2;
-    
+
   }
 }
-
-
-
-
 
 /* ===== Avatar ===== */
 .avatar {
   position: absolute;
   left: 50%;
-  top: 292px;
+  top: 292px - $--panel-dark-correction;
   transform: translateX(-50%);
   width: 120px;
   height: 120px;
@@ -91,7 +89,7 @@
 .form-fields {
   position: absolute;
   left: 16px;
-  top: 444px;
+  top: 444px  - $--panel-dark-correction - 8px;
   width: calc(100% - 32px);
   display: flex;
   flex-direction: column;
@@ -163,7 +161,7 @@
 .buttons {
   position: absolute;
   left: 50%;
-  top: 647px;
+  top: 647px +  $--panel-dark-correction;
   transform: translateX(-50%);
   display: flex;
   gap: 20px;
